0.16 - 2012xxxx
===============

- Add "struct mosquitto *mosq" parameter for all callbacks in the client
  library. This is a binary incompatible change so the soversion of the
  libraries has been incremented. The new parameter should make it easier to
  use callbacks in practice.
- Add reload parameter for security init/cleanup functions.
- Add mosquitto_want_write() for use when using own select() loop with
  mosquitto_socket().
- Add mosquitto_connect_async() to provide a non-blocking connect client call.
- Fix reloading of log configuration.
- Add option for expiring disconnected persistent clients.
- Add option for queueing of QoS 0 messages when persistent clients are
  disconnected.
- mosquitto_new() will now generate a random client id if the id parameter is
  NULL.
- The clean_session parameter has been moved from mosquitto_connect() to
  mosquitto_new() because it is a client parameter rather than a connection
  parameter.
- mosquitto_new() now sets errno to indicate failure type.
- Add mosquitto_user_data_set() to allow user data pointer to be updated.
- Usernames were being lost when a non clean-session client reconnected,
  potentially causing problems with ACLs. This has been fixed.
- The Python library has modified to match the libmosquitto changes and
  simplified at the same time.
- The Python library should now be compatible with Python 3.
- Significant improvement to memory handling on Windows.
- Fix db_dump reading of retained messages.
- Fix reloading of persistence_file and persistence_location.
- Add example of logging all messages to mysql.
- Add "int rc" parameter to disconnect callback to indicate whether disconnect
  was unexpected or the result of calling mosquitto_disconnect().
- Fix reloading of persistence location.
- Fix automatic client id generation on Windows.
- Fix missing COMPAT_ECONNRESET define on Windows.
- Fix broker crash on incorrect protocol number.
- mosquitto_loop_misq() can now return MOSQ_ERR_NO_CONN;